--- a/assets/adaptVideoLand.css
+++ b/assets/adaptVideoLand.css
@@ -1,7 +1,7 @@
 @media (max-width: 720px) {
     #first_video_track {
         width: 100%;
-        object-fit: fill;
+        /* object-fit: fill; */
     }
     form > input {
         height: 35px;
