--- a/assets/adaptVideoLand.css
+++ b/assets/adaptVideoLand.css
@@ -1,8 +1,7 @@
 @media (max-width: 720px) {
     #first_video_track {
         width: 100%;
-        height: auto;
-        /* object-fit: fill; */
+        object-fit: cover;
     }
     form > input {
         height: 35px;
